[package]
name = "matching-network-rs"
version = "0.1.0"
authors = ["Francesco Urbani <francescourbanidue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# uom = "0.31.1"
assert_approx_eq = "1.1.0"
quantiphy-rs = { path = "../quantiphy-rs" }